Add producers and consumers, telegram bot (and some infra changes) - Producer - Logger and configs - Telegram - Consumer - Refactoring - Charts - Ruble pulse - LastPriceModule - Ruble pulse (tuning) - Ruble pulse (tuning) and portfolio - Portfolio events - Ruble pulse tuning

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,7 +1,49 @@
 
-tinvest {
+tinkoff_invest_api {
     url = "invest-public-api.tinkoff.ru",
     port = 443,
     token = "",
     token = ${?TINVEST_TOKEN}
+}
+
+consumer {
+    url = "localhost:9092",
+    topic = "last-price-events"
+    groupId = "groupId"
+}
+
+telegram {
+    url = "https://api.telegram.org"
+    token = ""
+    token = ${?TG_TOKEN}
+}
+
+tinvest {
+    subscribes {
+        lastPricesFor = [
+            "BBG0013HGFT4"  # USD/RUB
+        ]
+    }
+    portfolio {
+        accounts = [ "2000442208" ]
+    }
+
+    producers {
+        lastPriceEvents {
+            url = "localhost:9092",
+            topic = "last-price-events"
+        }
+        portfolioEvents {
+            url = "localhost:9092",
+            topic = "portfolio-events"
+        }
+    }
+}
+
+rublePulse {
+    chatId = 174861972
+    figi = "BBG0013HGFT4" # RUB
+    priceLimit = 0.01 # % (for example)
+    timeLimit = 1 hour
+    sizeLimit = 10000
 }
