Update readme and configs

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -25,7 +25,7 @@ tinvest {
         ]
     }
     portfolio {
-        accounts = [ "2000442208" ]
+        accounts = [ ]
     }
 
     producers {
@@ -43,7 +43,7 @@ tinvest {
 rublePulse {
     chatId = 174861972
     figi = "BBG0013HGFT4" # RUB
-    priceLimit = 0.01 # % (for example)
+    priceLimit = 1 # % (for example)
     timeLimit = 1 hour
     sizeLimit = 10000
 }
