Replace kafka producer to redis producer

--- a/Tinvest/src/main/resources/reference.conf
+++ b/Tinvest/src/main/resources/reference.conf
@@ -33,3 +33,11 @@ tinvest {
         }
     }
 }
+
+rublePulse {
+    chatId = 174861972
+    figi = "BBG0013HGFT4" # RUB
+    priceLimit = 1 # % (for example)
+    timeLimit = 1 hour
+    sizeLimit = 10000
+}
