Configs and assembly

--- a/Tinvest/src/main/resources/reference.conf
+++ b/Tinvest/src/main/resources/reference.conf
@@ -12,6 +12,10 @@ consumer {
     groupId = "groupId"
 }
 
+redis {
+    url = "redis://localhost"
+}
+
 tinvest {
     subscribes {
         lastPricesFor = [
