Changes: - Remove kafka and redis - Update libraries

--- a/RublePulseBot/src/main/resources/reference.conf
+++ b/RublePulseBot/src/main/resources/reference.conf
@@ -7,7 +7,7 @@ consumer {
 
 telegram {
     url = "https://api.telegram.org"
-    token = ""
+    token = "5243213225:AAEeDqEixUFwp0xeq3S4kykdxasYKOJKDyM"
     token = ${?TG_TOKEN}
 }
 
