--- a/RublePulseBot/src/main/resources/reference.conf
+++ b/RublePulseBot/src/main/resources/reference.conf
@@ -1,14 +1,22 @@
 
-consumer {
-    url = "localhost:9092",
-    topic = "last-price-events"
-    groupId = "groupId"
+tinvest {
+    url = "invest-public-api.tinkoff.ru",
+    port = 443,
+    token = "t.Qlx4Xgyxa0Tn8XTmHDtcDdov-RqXpoQLWtzqx7FeMG5BuuVz8z_JGAjecjSqGDDGURzcP8gc0EynTS9T4QP1RQ"
 }
 
 telegram {
     url = "https://api.telegram.org"
     token = "5243213225:AAEeDqEixUFwp0xeq3S4kykdxasYKOJKDyM"
     token = ${?TG_TOKEN}
+}
+
+postgres {
+    threads = 32
+    url = "jdbc:postgresql:board"
+    user = "docker"
+    user = ${?POSTGRES_USER}
+    password = "docker"
 }
 
 rublePulse {
