Write last price events to db

--- a/RublePulseBot/src/main/resources/reference.conf
+++ b/RublePulseBot/src/main/resources/reference.conf
@@ -26,3 +26,11 @@ rublePulse {
     timeLimit = 1 hour
     sizeLimit = 10000
 }
+
+business {
+    lastPriceSubscriptions {
+        instruments = [
+            "BBG0013HGFT4"
+        ]
+    }
+}
