--- a/RublePulseBot/src/main/resources/reference.conf
+++ b/RublePulseBot/src/main/resources/reference.conf
@@ -13,9 +13,8 @@ telegram {
 
 postgres {
     threads = 32
-    url = "jdbc:postgresql:board"
+    url = "jdbc:postgresql:invest"
     user = "docker"
-    user = ${?POSTGRES_USER}
     password = "docker"
 }
 
@@ -30,7 +29,7 @@ rublePulse {
 business {
     lastPriceSubscriptions {
         instruments = [
-            "BBG0013HGFT4"
+            "BBG0013HGFT4", "US69269L1044"
         ]
     }
 }
